# data_mining

./: data_mining.py  test_cases_analysis_process.py  transform_bean.py  transform_elsatodynamic.py  transform_iris.py  transform_rice.py  transform_wine.py
cpp/: .clang-format  CMakeLists.txt  conanfile.txt  data_mining.cpp
input_data/data/: 2d_elastodynamic_metamaterials.csv  Rice_Cammeo_Osmancik_modified.csv  dry_bean_dataset.csv  iris_modified.csv  toy_dataset.csv  wine_quality.csv
out_data/toy_dataset/: OUT_EPS-NB_toy_dataset_D2_R8_m2_Eps1.5.csv  OUT_EPS-TI-NB_toy_dataset_D2_R8_m2_Eps1.5.csv  STAT_EPS-NB_toy_dataset_D2_R8_m2_Eps1.5.csv  STAT_EPS-TI-NB_toy_dataset_D2_R8_m2_Eps1.5.csv
